<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
<TextView 
	android:text="@string/whsNameLbl" 
	android:id="@+id/whsNameLbl" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content">
</TextView>

	<TextView 
		android:text="@string/nameLbl" 
		android:id="@+id/nameLbl" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content">
	</TextView>
	<EditText 
		android:id="@+id/nameTxt" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:singleLine="true">
	</EditText>
	<TextView 
		android:text="@string/feedbackLbl" 
		android:id="@+id/feedbackLbl" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content">
	</TextView>
	<EditText 
		android:id="@+id/feedbackTxt" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:singleLine="true">
	</EditText>
	<TextView 
		android:text="@string/emailLbl"
		android:id="@+id/emailLbl" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content">
	</TextView>
	<EditText 
		android:id="@+id/emailTxt" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:singleLine="true">
	</EditText>
	<TextView 
		android:text="@string/phoneLbl" 
		android:id="@+id/phoneLbl" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:singleLine="true">
	</TextView>
	<EditText 
		android:id="@+id/phoneTxt" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_weight="5"
		android:singleLine="true">
	</EditText>
	<TextView 
		android:text="@string/ratingLbl" 
		android:id="@+id/ratingLbl" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content">
	</TextView>
	<Spinner 
		android:id="@+id/rating" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
	</Spinner>
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button 
			android:text="@string/submitBtnTxt" 
			android:id="@+id/submitBtn" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_weight="1">
		</Button>
		<Button 
			android:text="@string/cancelBtnTxt" 
			android:id="@+id/cancelBtn" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_weight="1">
		</Button>
		</LinearLayout>
</LinearLayout>
